Using Integer.valueOf instead of new Integer
This is a suggestion by Findbugs to make the code more efficient.